--- a/sass/layouts/baseline/baseline.layout.scss
+++ b/sass/layouts/baseline/baseline.layout.scss
@@ -14,6 +14,7 @@
 @import "../../_variables.scss";
 
 .default-page .l-main,
+.page-taxonomy .l-main,
 .pane-edan-search-search-form,
 .front .l-panel-wrapper,
 .l-footer-preface .l-container,
