--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -50,7 +50,7 @@ $font-size-h1            : ceil($font-size-base * 2.375); // 38px
 $font-size-h2            : ceil($font-size-base * 2); // 32px
 //$font-size-h3            : ceil($font-size-base * 1.75); // 28px
 $font-size-h3            : $font-size-base * 1.3125; // ~21px
-$font-size-h4            : $font-size-base;
+$font-size-h4            : $font-size-base*1.125;
 $font-size-h5            : $font-size-base; // 16x
 
 $baseLineHeight          : 1.5;
